<resources>
    <string name="app_name">Score Keeper</string>
    <string name="minus_button">Minus Button</string>
    <string name="team_1">Team 1</string>
    <string name="initial_score">0</string>
    <string name="plus_button">Plus Button</string>
    <string name="team_2">Team 2</string>

    <!--    Option menu strngs-->
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
